--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,9 @@ body {
 
 .App {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   min-height: 100vh;
+  
 }
 
 .App-header {
@@ -18,6 +19,7 @@ body {
   padding: 20px;
   color: white;
   text-align: center;
+  width: 50%;
 }
 
 .App-header h1 {
@@ -106,4 +108,29 @@ form button {
 
 form button:hover {
   background-color: #21a1f1;
+}
+@media (max-width: 600px) {
+  .App {
+    flex-direction: column;
+  }
+
+  .App-header {
+    width: 100%;
+    height: 50px;
+  }
+
+  nav {
+    margin-top: 0;
+    text-align: center;
+  }
+
+  main {
+    width: 100%;
+    padding: 10px;
+  }
+
+  form {
+    width: 100%;
+    max-width: 100%;
+  }
 }
