--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -59,21 +59,21 @@ button:hover {
 h3 {
   margin-top: 20px;
 }
-
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
 }
 
 th, td {
-  padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #ddd;
+  padding: 8px;
   text-align: left;
 }
 
-th {
-  background-color: #f2f2f2;
+td {
+  max-width: 300px; /* Example maximum width for task cells */
+  word-wrap: break-word; /* Allow long words to wrap to the next line */
+  white-space: normal; /* Ensure text wraps within the cell */
 }
 
 .App-header {
