--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -86,8 +86,23 @@ td {
   margin: 0;
 }
 
+.delete-button, .edit-button, .save-button {
+  background-color: #8f0a00;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
 
+}
+.edit-button, .save-button{
+  background-color: #4CAF50;
+  margin-bottom: 10px;
 
+}
+.delete-button:hover{
+  background-color: #d32f2f;
+}
 /* main {
   padding: 20px;
 } */
