--- a/src/App.css
+++ b/src/App.css
@@ -4,63 +4,18 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f9;
-}
-
-.App {
-  display: flex;
-  flex-direction: row;
-  min-height: 100vh;
-}
-
-.App-header {
-  background-color: #282c34;
-  padding: 20px;
-  color: white;
-  text-align: center;
-  width: 50%;
-}
-
-.App-header h1 {
-  margin: 0;
-  font-size: 2.5rem;
-}
-
-.App-header p {
-  margin: 10px 0;
-  font-size: 1.2rem;
-}
-
-nav {
-  margin-top: 20px;
-}
-
-nav a {
-  margin: 0 15px;
-  text-decoration: none;
-  color: #61dafb;
-  font-size: 1rem;
-}
-
-nav a:hover {
-  text-decoration: underline;
+  /* background-color: #f4f4f9; */
+  box-sizing: content-box;
 }
 
 main {
-  flex: 1;
-  padding: 20px;
-  display: flex;
+  margin: 0 auto;
+  margin-left: 15%;
+  margin-top: -2rem;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
 }
-
-.App-footer {
-  background-color: #282c34;
-  padding: 10px;
-  color: white;
-  text-align: center;
-}
-
 .App-footer p {
   margin: 0;
   font-size: 0.9rem;
@@ -71,8 +26,7 @@ form {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
-  width: 100%;
+  max-width: 50%;
 }
 
 form div {
@@ -109,43 +63,17 @@ form button:hover {
   background-color: #21a1f1;
 }
 
-@media (max-width: 600px) {
-  .App {
-    flex-direction: column;
 
-    justify-content: center;
-    align-items: center;
-  }
-  #img-container {
-    display: none;
-  }
-  .App-header {
-    width: 95%;
-    height: 50px;
-  }
-
-  nav {
-    margin-top: 0;
-    text-align: center;
-  }
-
-  main {
-    width: 90%;
-    padding: 10px;
-  }
-
-  form {
-    width: 90%;
-    max-width: 100%;
-  }
-}
-@media (max-width: 600px) {
-  main {
-    width: 85%;
-    padding: 10px;
+@media screen and (max-width: 1008px) {
+  main{
+    margin-top: 2rem;
+    margin-left: 0;
+    font-size: small;
+    
   }
   form {
-    width: 80%;
-    max-width: 100%;
+    margin-top: 2rem;
+    
   }
+  
 }
