--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background-color: rgb(232, 232, 232);
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  overflow-y: scroll;
+overflow-x: hidden;
 }
