--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,9 +1,16 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 15px;
   background-color: #f9f9f9;
+  border:3px solid #21a1f1;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -72,9 +79,9 @@ th, td {
 }
 
 td {
-  max-width: 300px; /* Example maximum width for task cells */
-  word-wrap: break-word; /* Allow long words to wrap to the next line */
-  white-space: normal; /* Ensure text wraps within the cell */
+  max-width: 300px;
+  word-wrap: break-word; 
+  white-space: normal; 
 }
 
 .App-header {
@@ -87,18 +94,46 @@ td {
   margin: 0;
 }
 
-.delete-button, .edit-button, .save-button {
+.delete-button, .save-button {
   background-color: #8f0a00;
   color: white;
   border: none;
   padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
-
+ 
+ 
 }
+.button-container {
+  display: flex;
+  flex-direction: column; 
+  gap: 10px; 
+}
+
+.delete-button {
+  background-color: #8f0a00;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100px; 
+}
+.delete-button, .edit-button {
+  width: 130px; 
+  padding: 5px 10px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  height: 30px;
+}
+
 .edit-button, .save-button{
   background-color: #4CAF50;
   margin-bottom: 10px;
+  /* width: 100px; */
+  /* height:20px */
 
 }
 .delete-button:hover{
@@ -107,6 +142,30 @@ td {
 .icon-white {
   color: white;
 }
-/* main {
-  padding: 20px;
-} */
+
+.full-width-button {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+@media (max-width: 700px) { 
+  .full-width-button {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+}
+
+@media (max-width: 600px) { 
+  .delete-button, .edit-button {
+    width: 100%; 
+    max-width: 100%; 
+    box-sizing: border-box; 
+  }
+}
+@media (max-width: 700px) { 
+  .from-1 {
+    width: 90%; 
+    max-width: 300px; 
+  }
+}
