--- a/src/components/Loader/LoadingSpinner.css
+++ b/src/components/Loader/LoadingSpinner.css
@@ -270,3 +270,10 @@
       transform: rotate(-1turn);
     }
   }
+  @media (max-width: 768px) {
+    .wheel-and-hamster {
+      top: 50%;   
+      left: 50%;  
+      transform: translate(-50%, -50%); 
+    }
+  }
