fix current month date and ornamental change

--- a/src/components/MonthlyDashboard/MonthlyDashboard.css
+++ b/src/components/MonthlyDashboard/MonthlyDashboard.css
@@ -89,7 +89,7 @@
 }
 
 .project-name {
-  color: #4CAF50
+  color: #000000
 ;
   font-weight: 500;
   display: block;
@@ -127,7 +127,7 @@
 }
 
 .project-title {
-  color: #4CAF50
+  color: #071607
  !important;
   margin-bottom: 8px !important;
 }
