--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -124,7 +124,7 @@ td {
 }
 .delete-button, .edit-button {
   width: 130px; 
-  padding: 5px 10px;
+  padding:  5px;
   border-radius: 4px;
   border: none;
   cursor: pointer;
@@ -135,9 +135,11 @@ td {
 .edit-button, .save-button{
   background-color: #4CAF50;
   margin-bottom: 10px;
-  /* width: 100px; */
-  /* height:20px */
-
+  
+  width: 100px; 
+  height:20px;
+  width: 130px; 
+  padding:  7px;
 }
 .delete-button:hover{
   background-color: #d32f2f;
