--- a/src/components/Admin/LeaveManagement.css
+++ b/src/components/Admin/LeaveManagement.css
@@ -1,11 +1,17 @@
 .leave-container {
-  max-width: 1200px;
+  /* max-width: 1200px; */
+  width: 90%;
   margin: 10px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  /* margin: 10px auto;
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #ffffff;
-  font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif; */
 }
 
 h1 {
