--- a/src/components/Admin/ProjectManagement.css
+++ b/src/components/Admin/ProjectManagement.css
@@ -1,5 +1,5 @@
 .admin-container {
-  /* margin-left: 50px; */
+  margin-left: 50px;
   padding: 20px;
   background-color: #F4F4F4;
   /* min-height: 100vh; */
