--- a/src/components/Admin/admin.css
+++ b/src/components/Admin/admin.css
@@ -2,7 +2,7 @@
   margin-left: 50px;
   padding: 20px;
   background-color: #F4F4F4;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   overflow-x: auto;
 }
 .admin-title {
