--- a/src/components/Admin/AdminDashboard.css
+++ b/src/components/Admin/AdminDashboard.css
@@ -150,7 +150,7 @@ body::-webkit-scrollbar {
     font-size: 15px;
     padding: 8px 10px;
     text-align: left;
-    width: 100%;
+    /* width: 100%; */
   }
 
   .content {
