--- a/src/components/Admin/LeaveManagement.css
+++ b/src/components/Admin/LeaveManagement.css
@@ -111,6 +111,10 @@ label {
     max-width: 765px;
     overflow: scroll;
   }
+  .history-data{
+    max-width: 765px;
+    overflow: scroll;
+  }
 }
 
 @media (max-width: 768px) {
@@ -118,6 +122,9 @@ label {
     max-width: 760px;
   }
   .approved-data{
+    max-width: 760px;
+  }
+  .history-data{
     max-width: 760px;
   }
 }
@@ -141,6 +148,9 @@ label {
     padding: 8px;
     font-size: 14px;
   }
+  .history-data{
+    max-width: 415px;
+  }
 }
 
 @media (max-width: 375px) {
@@ -151,8 +161,11 @@ label {
     max-width: 370px;
   }
   .balance-data{
-    max-width: 365px;
+    max-width: 370px;
     overflow: scroll;
+  }
+  .history-data{
+    max-width: 370px;
   }
 }
 
@@ -164,6 +177,9 @@ label {
     max-width: 315px;
   }
   .balance-data{
-    max-width: 310px;
+    max-width: 315px;
+  }
+  .history-data{
+    max-width: 315px;
   }
 }
