--- a/src/components/Admin/ProjectManagement.css
+++ b/src/components/Admin/ProjectManagement.css
@@ -1,5 +1,5 @@
 .admin-container {
-  margin-left: 50px;
+  margin-left: 40px;
   padding: 20px;
   background-color: #F4F4F4;
   overflow-x: auto;
@@ -14,7 +14,7 @@
 /* Form Section */
 .form-container {
   background: white;
-  padding: 20px;
+  padding: 10px;
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
@@ -24,7 +24,7 @@
 }
 .form-fields {
   display: flex;
-  gap: 5px;
+  gap: 2px;
   flex-wrap: wrap;
   width: 100%;
 }
@@ -34,8 +34,12 @@
   width: 32.99%;
 }
 .input-field {
-  /* width: 32.99%; */
   padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.input_field {
+  padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
@@ -186,10 +190,10 @@ th {
     margin-left: 80px;
   }
   .form-fields input, .form-fields select {
-    width: 232px;
+    width: 235px;
   }
   .form-container button{
-    width: 676px;
+    width: 690px;
   }
 
  .filters{
@@ -228,7 +232,7 @@ th {
   }
   
   .form-container button{
-    width: 655px;
+    width: 665px;
   }
   .filters{
     row-gap: 0;
@@ -263,6 +267,9 @@ th {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .input-wrapper{
+    width: 260px;
   }
   .form-fields input, .form-fields select{
     width: 260px;
