--- a/src/components/LeaveHistory/LeaveHistory.css
+++ b/src/components/LeaveHistory/LeaveHistory.css
@@ -1,26 +1,4 @@
-.leave-history-container {
-  padding: 20px;
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-.leave-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.leave-table th,
-.leave-table td {
-  border: 1px solid #ccc;
-  padding: 8px 12px;
-  text-align: left;
-}
-
-.leave-table th {
-  background-color: #f0f0f0;
-}
-
-.tabs {
+.Tabs {
   display: flex;
   gap: 10px;
   margin-bottom: 20px;
@@ -45,4 +23,32 @@
   background-color: #2e7d32;
   color: white;
   border-color: #2e7d32;
+}
+
+@media (max-width: 1024px) {
+  .main_container {
+    margin-left: 82px;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .main_container {
+    margin-left: 0px;
+  }
+}
+@media (max-width: 425px) {
+  .main_container {
+    padding: 5px;
+  }
+  
+}
+@media (max-width: 320px) {
+  .main_container {
+    width: 333px;
+  }
+  .Tabs {
+    gap: 5px;
+  }
+  
 }
