--- a/src/components/Admin/ProjectManagement.css
+++ b/src/components/Admin/ProjectManagement.css
@@ -226,6 +226,7 @@ th {
 @media (max-width: 768px) {
  .admin-container {
     margin-left: 0px;
+    margin-top: 35px;
   }
   .form-fields input, .form-fields select{
     width: 225px;
