--- a/src/components/MonthlyDashboard/MonthlyDashboard.css
+++ b/src/components/MonthlyDashboard/MonthlyDashboard.css
@@ -284,8 +284,8 @@
     padding: 0;
   }
   .dashboard-container {
-    margin: 10px;
-    padding: 5px;
+    margin-left: 10px;
+    margin-top: 70px !important;
   }
   .dashboard-header{
     text-align: center;
