--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -142,12 +142,16 @@ td {
 .edit-button,
 .save-button {
   background-color: #4caf50;
-  margin-bottom: 10px;
-
-  width: 100px;
-  height: 20px;
+  margin-bottom: 18px;
+  max-width: 130px;
+  height: 30px;
   width: 130px;
   padding: 7px;
+}
+.save-button{
+  max-width: 130px;
+  height: 30px;
+  margin-top: 20px;
 }
 .delete-button:hover {
   background-color: #d32f2f;
@@ -165,10 +169,6 @@ td {
   .full-width-button{
     max-width: 100%;
   }
-  .save-button{
-    padding: 0;
-    width: 20px;
-  }
 }
 
 @media (max-width: 768px) {
@@ -177,8 +177,8 @@ td {
     max-width: 100%;
     box-sizing: border-box;
   }
-  .form-container{
-    margin-top: 35px !important;
+  .formContainer{
+    margin-top: 40px !important;
   }
 }
 
@@ -202,10 +202,26 @@ td {
     max-width: 300px;
   }
 }
+@media (max-width:425px){
+  .delete-button,
+  .edit-button {
+    max-width: 50px;
+  }
+  .save-button{
+    max-width: 50px;
+    height: 35px;
+    margin-top: 31px;
+  }
+  .full-width-button{
+    max-width: 300px;
+  }
+}
 
 @media (max-width: 320px) {
   .from-1 {
-    width: 90%;
+    margin: 0;
+    margin-left: 4px;
+    width: 86%;
     max-width: 270px;
   }
 }
