--- a/src/components/LeaveHistory/LeaveHistory.css
+++ b/src/components/LeaveHistory/LeaveHistory.css
@@ -25,6 +25,11 @@
   border-color: #2e7d32;
 }
 
+.main_container {
+  margin-top: 15px;
+  margin-left: 60px;
+}
+
 @media (max-width: 1024px) {
   .main_container {
     margin-left: 82px;
@@ -42,9 +47,10 @@
   .main_container {
     padding: 5px;
     margin-right: 0px;
+    margin-left: 0px;
   }
-  
 }
+
 @media (max-width: 320px) {
   .main_container {
     width: 333px;
