--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -126,7 +126,7 @@ td {
   padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
-  width: 100px;
+  max-width: 130px;
 }
 .delete-button,
 .edit-button {
