--- a/src/components/Admin/AdminDashboard.css
+++ b/src/components/Admin/AdminDashboard.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: #f9fafb;
-  margin-left: 3%;
-  margin-right: 3%;
+  margin-left: -3%;
 }
 
 body::-webkit-scrollbar {
@@ -69,6 +68,13 @@ body::-webkit-scrollbar {
 }
 
 /* Responsive Styles */
+
+@media (max-width: 1440px) {
+  .admin-dashboard {
+    margin-left: 2%;
+  }
+}
+
 @media (max-width: 1024px) {
   .admin-dashboard {
     margin-left: 0px;
@@ -108,8 +114,8 @@ body::-webkit-scrollbar {
 
   .admin-navbar {
     justify-content: space-between;
-    margin-left: 10.5%;
-    margin-right: 0.7%;
+    margin-left: 10%;
+    margin-right: 0.5%;
   }
 
   .admin-navbar h2 {
@@ -134,6 +140,7 @@ body::-webkit-scrollbar {
     align-items: flex-start;
     padding: 12px 15px;
     margin-left: 0;
+    margin-top: 60px;
   }
 
   .admin-navbar h2 {
@@ -170,6 +177,9 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 480px) {
+  .admin-navbar {
+    margin-top: 55px;
+  }
   .admin-navbar h2 {
     font-size: 18px;
   }
