--- a/src/components/Admin/ProjectManagement.css
+++ b/src/components/Admin/ProjectManagement.css
@@ -34,6 +34,24 @@
   display: flex;
   flex-direction: column;
   width: 32.99%;
+  position: relative;
+}
+.tooltip-container {
+  position: relative;
+}
+
+.custom-tooltip {
+  position: absolute;
+  bottom: -30px;
+  width: 90%;
+  background-color: #f0f0f0;
+  color: #333;
+  padding: 8px;
+  font-size: 12px;
+  border-radius: 4px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  z-index: 10;
+  white-space: normal;
 }
 .input-field {
   padding: 10px;
