--- a/src/components/Admin/AdminDashboard.css
+++ b/src/components/Admin/AdminDashboard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: #f9fafb;
-  margin-left: -3%;
+  /* margin-left: -3%; */
 }
 
 body::-webkit-scrollbar {
