--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,5 +1,3 @@
-/* Login.css */
-
 .main-container {
   display: flex;
   justify-content: center;
@@ -18,6 +16,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* border: 2px solid blue; */
 }
 
 #learn-heading {
@@ -35,4 +34,38 @@
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .main-container {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 425px) {
+  #login-container {
+    width: 75%;
+  }
+  #learn-heading{
+    width: 100%;
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 375px) {
+  #login-container {
+    width: 72%;
+  }
+  #learn-heading{
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 320px) {
+  #login-container {
+    width: 70%;
+  }
+  #learn-heading{
+    font-size: 0.9rem;
+  }
 }
